src/main/java/com/example/authorization_service/error/InvalidCredentials.java
package com.example.authorization_service.error;

public class InvalidCredentials extends RuntimeException {
    public InvalidCredentials(String msg) {
        super(msg);
    }
}
